<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_general" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_run_in_background"
            android:summary="@string/pref_summary_run_in_background"
            android:title="@string/pref_title_run_in_background" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_periodical_scan"
            android:summary="@string/pref_summary_periodical_scan"
            android:title="@string/pref_title_periodical_scan" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_serial" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_clear_text_after_sending"
            android:summary="Clear text once sent"
            android:title="@string/pref_clear_text_after_sending" />
        
		<CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_append_/r_at_end_of_data"
            android:summary="Send Carriage Return at the end of the data"
            android:title="Send CR" />
                
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_OTA" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_reset_module_after_sending"
            android:summary="Reset module once file is uploaded"
            android:title="@string/pref_reset_module_after_sending" />
    </PreferenceCategory>

</PreferenceScreen>