<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2014 Laird Technologies. All Rights Reserved.
  
The information contained herein is property of Laird Technologies.
Licensees are granted free, non-transferable use of the information. NO WARRANTY of ANY KIND is provided. 
This heading must NOT be removed from the file.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/containerDeviceDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <!-- name -->
	<TextView
	    android:id="@+id/labelDeviceName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:text="@string/label_device_name"
	    android:textStyle="bold" />
	
	<TextView
	    android:id="@+id/valueDeviceName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/valueDeviceBattery"
	    android:layout_toRightOf="@id/labelDeviceName"
	    android:paddingLeft="5dp"
	    android:text="@string/non_applicable" />
	
	<!-- address -->
	<TextView
	    android:id="@+id/labelDeviceAddress"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/labelDeviceName"
	    android:text="@string/label_device_address"
	    android:textStyle="bold" />

	<TextView
	    android:id="@+id/valueDeviceAddress"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/labelDeviceAddress"
	    android:layout_below="@id/labelDeviceName"
	    android:paddingLeft="5dp"
	    android:text="@string/non_applicable" />
	
	<!-- RSSI -->
	<TextView
	    android:id="@+id/labelDeviceRSSI"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/labelDeviceAddress"
	    android:text="@string/label_device_rssi" 
	    android:textStyle="bold"/>

	<TextView
	    android:id="@+id/valueDeviceRssi"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/labelDeviceRSSI"
	    android:layout_below="@id/labelDeviceAddress"
	    android:paddingLeft="5dp"
	    android:text="@string/non_applicable" />
	
	<!-- battery -->
	<TextView
	    android:id="@+id/labelDeviceBattery"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/labelDeviceRSSI"
	    android:text="@string/label_device_battery"
	    android:textStyle="bold" />
	
	<TextView
	    android:id="@+id/valueDeviceBattery"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/labelDeviceRSSI"
	    android:layout_toRightOf="@id/labelDeviceBattery"
	    android:paddingLeft="5dp"
	    android:text="@string/non_applicable" />
	
</RelativeLayout>