<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2014 Laird Technologies. All Rights Reserved.
  
The information contained herein is property of Laird Technologies.
Licensees are granted free, non-transferable use of the information. NO WARRANTY of ANY KIND is provided. 
This heading must NOT be removed from the file.
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelDeviceNameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:text="@string/label_device_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/valueDeviceNameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="999"
            android:ellipsize="end"
            android:text=""
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelDeviceRssiItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:text="@string/label_device_rssi"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelDeviceAddressItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:text="@string/label_device_address"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/valueDeviceAddressItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="999"
            android:ellipsize="end"
            android:text=""
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/valueDeviceRssiItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:textSize="12sp" />
    </TableRow>

</TableLayout>